@startuml NotificationSettingsClasses
title Notification settings context

skinparam packageStyle rectangle
skinparam linetype ortho

package "notification-settings/domain" {
  class NotificationScopeSettings <<AggregateRoot>>
  class NotificationScopeSettingsPreferences <<ValueObject>>
  class NotificationLevel <<ValueObject>>
  class NotificationMuteUntil <<ValueObject>>
  class NotificationSettingScope <<ValueObject>>
  class NotificationSettingScopeType <<ValueObject>>

  abstract class NotificationScopeSettingsRepository

  class NotificationSettingsWereUpdatedEvent <<DomainEvent>>
  class NotificationSettingsWereResetEvent <<DomainEvent>>
}

package "notification-settings/application" {
  class NotificationSettingsFinder
  class NotificationSettingsUpdater
  class NotificationSettingsResetter
  class NotificationSettingsFindMessage
  class NotificationSettingsUpdateMessage
  class NotificationSettingsResetMessage
}

package "notification-settings/infrastructure" {
  class OrbitDBNotificationScopeSettingsRepository
}

NotificationScopeSettings *-- NotificationScopeSettingsPreferences
NotificationScopeSettings *-- NotificationSettingScope
NotificationScopeSettingsPreferences *-- NotificationLevel
NotificationScopeSettingsPreferences *-- NotificationMuteUntil
NotificationSettingScope *-- NotificationSettingScopeType

NotificationScopeSettings ..> NotificationSettingsWereUpdatedEvent
NotificationScopeSettings ..> NotificationSettingsWereResetEvent

NotificationSettingsFinder ..> NotificationSettingsFindMessage
NotificationSettingsFinder ..> NotificationScopeSettingsRepository
NotificationSettingsUpdater ..> NotificationSettingsUpdateMessage
NotificationSettingsUpdater ..> NotificationScopeSettingsRepository
NotificationSettingsResetter ..> NotificationSettingsResetMessage
NotificationSettingsResetter ..> NotificationScopeSettingsRepository
OrbitDBNotificationScopeSettingsRepository ..|> NotificationScopeSettingsRepository
OrbitDBNotificationScopeSettingsRepository ..> NotificationScopeSettings

@enduml
